--- a/website/pages/dashboard.html
+++ b/website/pages/dashboard.html
@@ -33,26 +33,26 @@
 </style>
 
 
-<div class="container-fluid pt-3">
-  <div class="row col pb-0">
+<div class="container-fluid pt-3"><br>
+  <div class="row col pb-0 justify-content-center">
     <p class="lead mb-1">Look Up Address</p>
   </div>
-  <div class="row pl-3 mb-0">
+  <div class="row pl-4 mb-0 justify-content-center">
     <form id="searchForm">
       <div class="input-group">
-        <input type="text" id="searchBar" class="form-control" placeholder="Wallet Address" aria-label="Wallet Address" aria-describedby="basic-addon2" style="min-width: 400px;">
+        <input type="text" id="searchBar" class="form-control" placeholder="Wallet Address" aria-label="Wallet Address" aria-describedby="basic-addon2" style="min-width: 500px;">
         <div class="input-group-append">
           <button class="btn btn-outline-secondary" id="searchButton" type="submit"><i class="fa fa-search"></i> Lookup</button>
         </div>
       </div>
     </form>
-  </div>
+  </div><br>
   <div class="row">
     <table id="walletTable" class="table table-bordered">
       <thead>
         <tr>
-          <th scope="col"><i class="fa fa-money"></i> Wallets</th>
-          <th></th>
+          <th scope="col"><i class="fa fa-wallet"></i> Wallets</th>
+          <th><i class="fa fa-eraser"></i> Actions</th>
         </tr>
       </thead>
       <tbody id="walletTableBody">
